-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.15.0-beta1
-
None
-
c53932ff40285a8aeb187931def522bf1ca2ccae (qt-creator/qt-creator/master)
- Search for something using Advanced Find -> Search & Replace
- Try to replace. Nothing happens.
- Search & Replace again
- Try to replace -> crash.
Probably caused by f3d7717b319d1637ced862b8df5c627111052a5f.
15 RtlRaiseException ntdll 0x7ffb6791b474 16 KiUserExceptionDispatcher ntdll 0x7ffb6796fc4e 17 QListData::size Qt5Core 0x7ffb07b4bc43 18 Core::Internal::SearchResultWidget::checkedItems searchresultwidget.cpp 541 0x7ffb0700f864 19 Core::Internal::SearchResultWidget::handleReplaceButton searchresultwidget.cpp 513 0x7ffb0700fcf6 20 QObject::qt_static_metacall Qt5Core 0x7ffb07d31d49 21 QAbstractButton::clicked Qt5Widgets 0x7ffb089feca7 22 QAbstractButton::click Qt5Widgets 0x7ffb089febc8 23 QAbstractButton::mouseReleaseEvent Qt5Widgets 0x7ffb089ff8ad 24 QToolButton::mouseReleaseEvent Qt5Widgets 0x7ffb08ad5b3f 25 QWidget::event Qt5Widgets 0x7ffb089579b2 26 QApplicationPrivate::notify_helper Qt5Widgets 0x7ffb08934990 27 QApplication::notify Qt5Widgets 0x7ffb089328b0 28 QCoreApplication::notifyInternal2 Qt5Core 0x7ffb07d12aca 29 QApplicationPrivate::sendMouseEvent Qt5Widgets 0x7ffb08935b95 30 QSizePolicy::QSizePolicy Qt5Widgets 0x7ffb0898040a 31 QSizePolicy::QSizePolicy Qt5Widgets 0x7ffb0897e38e 32 QApplicationPrivate::notify_helper Qt5Widgets 0x7ffb08934990 33 QApplication::notify Qt5Widgets 0x7ffb08933a13 34 QCoreApplication::notifyInternal2 Qt5Core 0x7ffb07d12aca 35 QGuiApplicationPrivate::processMouseEvent Qt5Gui 0x7ffb082a32b6 36 QWindowSystemInterface::sendWindowSystemEvents Qt5Gui 0x7ffb0828ecb0 37 QEventDispatcherWin32::processEvents Qt5Core 0x7ffb07d5ba5a 38 qt_plugin_query_metadata qwindows 0x7ffb076b2dd9 39 QEventLoop::exec Qt5Core 0x7ffb07d0ef2c 40 QCoreApplication::exec Qt5Core 0x7ffb07d11a94 41 main main.cpp 805 0x7ff7477423a4 42 WinMain qtcreator 0x7ff747748b67 43 __scrt_common_main_seh exe_common.inl 288 0x7ff7477478ce 44 BaseThreadInitThunk KERNEL32 0x7ffb67646fd4 45 RtlUserThreadStart ntdll 0x7ffb6791cec1