Core: Fix crash with Search & Replace

Due to the use of a proxy model, we can no longer make assumptions about
the internal pointers of model indices.
Amends f3d7717b31.

Fixes: QTCREATORBUG-25278
Change-Id: Ia0225b0324897d16fe9650bf4282432278aeb63f
Reviewed-by: Eike Ziller <eike.ziller@qt.io>